Submitted 2 solutions, best result from rbf trained on 500,000 random datapoints

--- a/CompetitiveDataScienceCourse/Writeup.ipynb
+++ b/CompetitiveDataScienceCourse/Writeup.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -85,8 +85,8 @@
       "3     2      3            5\n",
       "4     3      3            5\n",
       "5     3      4            4\n",
-      "2.52 ms ± 67.4 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
-      "1.82 ms ± 22.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "2.86 ms ± 146 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n",
+      "2 ms ± 90.1 µs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
@@ -159,13 +159,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       date_block_num  shop_id  item_id  item_cnt_mnth\n",
+      "0                   2       47    12472            1.0\n",
+      "1                   9       25    14829            6.0\n",
+      "2                  11       25    11616            1.0\n",
+      "3                   8       27     9659            1.0\n",
+      "4                  24       48     6472            1.0\n",
+      "5                  16       57     8415            2.0\n",
+      "6                  18       24     6316            1.0\n",
+      "7                  23       25    16203            1.0\n",
+      "8                   0       41    11041            2.0\n",
+      "9                   8        6    16832            1.0\n",
+      "10                 23       15     3341            3.0\n",
+      "11                  3        3    15369            1.0\n",
+      "12                 23       31     1556            1.0\n",
+      "13                  9       55     9524            1.0\n",
+      "14                  8       25     7098            2.0\n",
+      "15                  0       31    13605            1.0\n",
+      "16                  0       41    19164            1.0\n",
+      "17                 22       17    12814            1.0\n",
+      "18                 12       16    15023            1.0\n",
+      "19                  2       54    13156            1.0\n",
+      "20                  8       53     7047            1.0\n",
+      "21                 32       46     2819            1.0\n",
+      "22                 30        7    13440            1.0\n",
+      "23                 32        2    16170            1.0\n",
+      "24                 22        2     3076            1.0\n",
+      "25                 23       31    17595            1.0\n",
+      "26                 29       47    18043            1.0\n",
+      "27                 28       56    10021            1.0\n",
+      "28                 12       15    12970            1.0\n",
+      "29                  1       27    18603            1.0\n",
+      "...               ...      ...      ...            ...\n",
+      "29328               8       27     7055            1.0\n",
+      "29329              13       57     2754            1.0\n",
+      "29330               0       47     6777            1.0\n",
+      "29331               0       51    12461            1.0\n",
+      "29332              21       58    18481            1.0\n",
+      "29333              14       58     7894            1.0\n",
+      "29334              11       15    15064            1.0\n",
+      "29335               8       52    15537            1.0\n",
+      "29336              18       12     4872            4.0\n",
+      "29337               8       47     3871            1.0\n",
+      "29338              15       31    15091            1.0\n",
+      "29339               2        6    10474            1.0\n",
+      "29340               1       35    18634            1.0\n",
+      "29341              29       42     3329            2.0\n",
+      "29342              27       21    10515            1.0\n",
+      "29343              11       15     2832            1.0\n",
+      "29344              13        4    20949            2.0\n",
+      "29345              11        5     3314            1.0\n",
+      "29346               0       25    21861            1.0\n",
+      "29347              22       37     2294            1.0\n",
+      "29348              10       54    14888            1.0\n",
+      "29349              11       59     7203            2.0\n",
+      "29350               4       56    20949            2.0\n",
+      "29351              18       54    12860            1.0\n",
+      "29352              15       53     2833            1.0\n",
+      "29353              19       21     6086            1.0\n",
+      "29354              19       52    10651            1.0\n",
+      "29355              28       22    12730            1.0\n",
+      "29356              15        6    16184            1.0\n",
+      "29357              31       21     5669            1.0\n",
+      "\n",
+      "[29358 rows x 4 columns]\n"
+     ]
+    }
+   ],
    "source": [
-    "dataset = train_set\n",
-    "train_set = agg_multiple(dataset.sample(frac=.01), [\"date_block_num\", \"shop_id\", \"item_id\"], \"item_cnt_day\", repl=\"item_cnt_mnth\")\n",
-    "test_set =  agg_multiple(dataset.sample(frac=.005), [\"date_block_num\", \"shop_id\", \"item_id\"], \"item_cnt_day\", repl=\"item_cnt_mnth\")\n"
+    "dataset = agg_multiple(train_set.sample(frac=.01), [\"date_block_num\", \"shop_id\", \"item_id\"], \"item_cnt_day\", repl=\"item_cnt_mnth\")\n",
+    "dataset[dataset[\"item_cnt_mnth\"] > 20] = 20\n",
+    "print(dataset)\n",
+    "train_set = dataset.sample(frac=.75)\n",
+    "test_set =  dataset.sample(frac=.25)\n"
    ]
   },
   {
@@ -197,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -206,8 +279,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.018241381441624127\n",
-      "true accuracy is  0.8417467129913482\n"
+      "[[1.00000000e+00 1.80000000e+01 2.60000000e+01 ... 3.65599322e+29\n",
+      "  3.08790812e+31 2.60809471e+33]\n",
+      " [1.00000000e+00 2.00000000e+00 3.00000000e+01 ... 1.15564191e+34\n",
+      "  2.98040049e+36 7.68645287e+38]\n",
+      " [1.00000000e+00 2.30000000e+01 3.00000000e+01 ... 5.57390580e+27\n",
+      "  2.33360856e+29 9.77004117e+30]\n",
+      " ...\n",
+      " [1.00000000e+00 2.50000000e+01 5.20000000e+01 ... 5.55412280e+31\n",
+      "  3.69562786e+33 2.45901392e+35]\n",
+      " [1.00000000e+00 1.40000000e+01 4.10000000e+01 ... 1.49393133e+36\n",
+      "  4.78786773e+38 1.53445322e+41]\n",
+      " [1.00000000e+00 1.30000000e+01 2.70000000e+01 ... 2.53304596e+31\n",
+      "  3.46652031e+33 4.74399724e+35]]\n",
+      "[[1.]\n",
+      " [1.]\n",
+      " [1.]\n",
+      " ...\n",
+      " [1.]\n",
+      " [1.]\n",
+      " [1.]]\n",
+      "-0.003803313929410024\n",
+      "true accuracy is  0.0\n",
+      "true accuracy is  0.0\n"
      ]
     }
    ],
@@ -222,7 +316,7 @@
     "y = np.array(train_set[[\"item_cnt_mnth\"]])\n",
     "y_test = np.array(test_set[[\"item_cnt_mnth\"]])\n",
     "# PolynomialFeatures (prepreprocessing)\n",
-    "poly = PolynomialFeatures(degree=30, include_bias=True)\n",
+    "poly = PolynomialFeatures(degree=10, include_bias=True)\n",
     "X_ = poly.fit_transform(X)\n",
     "X_test_ = poly.fit_transform(X_test)\n",
     "\n",
@@ -236,7 +330,11 @@
     "# Obtain coefficients\n",
     "lg.coef_\n",
     "\n",
+    "\n",
+    "\n",
+    "print(X_)\n",
     "preds = np.round(lg.predict(X_test_))\n",
+    "print(preds)\n",
     "print(lg.score(X_test_, y_test))\n",
     "#accuracy function\n",
     "# find absolute difference between predictions and values\n",
@@ -246,8 +344,11 @@
     "\n",
     "#true accuracy function\n",
     "# add up total correct, divide by total\n",
-    "true = np.sum((preds == y_test )) / max(y_test.shape) \n",
+    "true = np.sum((preds == y_test.ravel )) / len(y_test) \n",
+    "print(\"true accuracy is \", true)\n",
     "\n",
+    "preds = np.round(lg.predict(X_))\n",
+    "true = np.sum((preds == y.ravel )) / len(y) \n",
     "print(\"true accuracy is \", true)\n"
    ]
   },
@@ -268,15 +369,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.16763793559934959\n",
-      "true accuracy is  0.831732406839703\n"
+      "0.8079589865289066\n",
+      "true accuracy is  0.9182561307901907\n"
      ]
     }
    ],
@@ -319,22 +420,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-0.007883917992302258\n",
-      "-0.004947985036150904\n",
-      "true accuracy is  0.894134477825465\n",
-      "Hyper Parameter Tuning\n",
-      "0.07116304444788768\n",
-      "SVR(C=1000, cache_size=200, coef0=0.0, degree=3, epsilon=0.1, gamma=0.0001,\n",
-      "  kernel='rbf', max_iter=-1, shrinking=True, tol=0.001, verbose=False)\n",
-      "true accuracy is  0.8910688739014919\n"
+      "0.5734857195981953\n",
+      "0.6049434148817315\n",
+      "true accuracy is  0.9182561307901907\n",
+      "Hyper Parameter Tuning\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'\\n#parameters = {\\'kernel\\':(\\'sigmoid\\', \\'poly\\'), \\'C\\':[.1, 10, 1000], \\'epsilon\\':[.001, .1], \\'gamma\\' : [.001, 1, 1000], \\'degree\\' : [3, 7]}\\nPar1 = {\\'kernel\\' : [\\'sigmoid\\', \\'rbf\\'], \\'C\\': [.001, .1, 100, 1000], \\'epsilon\\':[.1], \\'gamma\\': [.0001, .001, .01, .1]}\\n\\nclf1 = GridSearchCV(regr, Par1)\\nclf1.fit(X, y.ravel())\\n\\nprint(clf1.score(X_test, y_test.ravel()))\\nprint(clf1.best_estimator_)\\n\\npreds = np.round(clf1.predict(X_test))\\ntrue = np.sum((preds == y_test.ravel() )) / len(y_test) \\nprint(\"true accuracy is \", true)\\n\\n#Par2 = {\\'kernel\\' : [\\'poly\\'], \\'C\\': [.1, 1], \\'epsilon\\':[.1], \\'gamma\\': [.1, 10], \\'degree\\':[5]}\\n\\n#clf2 = GridSearchCV(regr, Par2)\\n#clf2.fit(X, y.ravel())\\n\\n#print(clf2.score(X_test, y_test.ravel()))\\n#print(clf2.best_estimator_)\\n\\n#preds = np.round(clf2.predict(X_test))\\n#true = np.sum((preds == y_test.ravel() )) / len(y_test) \\n#print(\"true accuracy is \", true)\\n'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -346,7 +453,10 @@
     "#X_ = np.array(postval_set[[\"date_block_num\", \"shop_id\",\"item_id\"]])\n",
     "#y_ = np.array(postval_set[[\"item_cnt_mnth\"]])\n",
     "\n",
-    "regr = SVR(C=100, epsilon = .1, gamma=.01, kernel=\"sigmoid\")\n",
+    "#regr = SVR(C=10, epsilon = .1, gamma=.01, kernel=\"sigmoid\")\n",
+    "regr = SVR(C=10, epsilon = .1, gamma=.01, kernel=\"rbf\")\n",
+    "\n",
+    "#regr = SVR(C=10, epsilon = .1, gamma=.01, kernel=\"poly\", degree=15)\n",
     "regr.fit(X, y.ravel())\n",
     "preds = np.round(regr.predict(X_test))\n",
     "print(regr.score(X_test, y_test.ravel()))\n",
@@ -361,7 +471,7 @@
     "\n",
     "\n",
     "print(\"Hyper Parameter Tuning\")\n",
-    "\n",
+    "'''\n",
     "#parameters = {'kernel':('sigmoid', 'poly'), 'C':[.1, 10, 1000], 'epsilon':[.001, .1], 'gamma' : [.001, 1, 1000], 'degree' : [3, 7]}\n",
     "Par1 = {'kernel' : ['sigmoid', 'rbf'], 'C': [.001, .1, 100, 1000], 'epsilon':[.1], 'gamma': [.0001, .001, .01, .1]}\n",
     "\n",
@@ -385,7 +495,8 @@
     "\n",
     "#preds = np.round(clf2.predict(X_test))\n",
     "#true = np.sum((preds == y_test.ravel() )) / len(y_test) \n",
-    "#print(\"true accuracy is \", true)\n"
+    "#print(\"true accuracy is \", true)\n",
+    "'''"
    ]
   },
   {
